--- a/todo.txt
+++ b/todo.txt
@@ -13,7 +13,7 @@ Write tests
     - [x] Parser
     - [ ] Nodes
     - [ ] Tree modifier
-    - [ ] Preprocessor
+    - [x] Preprocessor
     - [ ] Generated parsers
 
 
